--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -177,7 +177,7 @@ inventory      = hosts
 #lookup_plugins     = /usr/share/ansible/plugins/lookup
 #inventory_plugins  = /usr/share/ansible/plugins/inventory
 #vars_plugins       = /usr/share/ansible/plugins/vars
-#filter_plugins     = /usr/share/ansible/plugins/filter
+filter_plugins     = /usr/share/ansible/plugins/filter:./filter_plugins
 #test_plugins       = /usr/share/ansible/plugins/test
 #strategy_plugins   = /usr/share/ansible/plugins/strategy
 
